tests/cli/component-model/strict-legacy-callback.wat.stderr
error: the `core` keyword is required in this reference: `(func ...)` should be written `(core func ...)` (or set WAST_STRICT_COMPONENT_INDICES=0 to accept the legacy syntax)
     --> tests/cli/component-model/strict-legacy-callback.wat:12:53
      |
   12 |     (canon lift (core func $m "f") async (callback (func $m "cb"))))
      |                                                     ^
